internal/gatewayapi/testdata/envoyproxy-accesslog-otel-notype.in.yaml
envoyProxyForGatewayClass:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    namespace: envoy-gateway-system
    name: test
  spec:
    telemetry:
      accessLog:
        settings:
        # When type is omitted, both text and json can be specified.
        - format:
            text: "%REQ(:METHOD)% %REQ(:PATH)% %PROTOCOL% %RESPONSE_CODE%"
            json:
              start_time: "%START_TIME%"
              method: "%REQ(:METHOD)%"
              response_code: "%RESPONSE_CODE%"
          sinks:
          - type: OpenTelemetry
            openTelemetry:
              host: otel-collector.monitoring.svc.cluster.local
              port: 4317
              resourceAttributes:
                k8s.cluster.name: "cluster-1"
    provider:
      type: Kubernetes
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
